# tomsoir-monorepo

./: MODULE.bazel  package.json  pnpm-lock.yaml  renovate.json  requirements.txt
experimental/service_test_ts_rspack_react_tests_assets_swc/: package.json
experimental/service_test_ts_vite_vitest_tests/: package.json
experimental/service_test_ts_webpack_react_tests_assets/: BUILD.bazel
tools/test-mocha/: package.json
tools/vite/: package.json
