###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# aspect_rules_ts
# https://github.com/aspect-build/rules_ts/releases/tag/v3.3.2
bazel_dep(name = "aspect_rules_ts", version = "3.5.0")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

# ---

# aspect_rules_js
# https://github.com/aspect-build/rules_js/releases/tag/v2.1.2
bazel_dep(name = "aspect_rules_js", version = "2.2.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

# ---

# aspect_rules_webpack
# https://github.com/aspect-build/rules_webpack/releases/tag/v0.16.0
bazel_dep(name = "aspect_rules_webpack", version = "0.16.0")

# ---

# # rules_sass
# # https://github.com/bazelbuild/rules_sass
# # https://github.com/GZGavinZhao/gzgz_rules_sass
bazel_dep(name = "gzgz_rules_sass", version = "1.0.0")

sass = use_extension("@gzgz_rules_sass//sass:extensions.bzl", "sass")
use_repo(sass, "sass_toolchains")
sass.toolchain(sass_version = "1.63.6")

register_toolchains("@sass_toolchains//:all")

# ---

# # copy_to_bin
# # https://github.com/bazel-contrib/bazel-lib/releases/tag/v2.10.0
bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")

# ---

# # rules_lint
# # https://github.com/aspect-build/rules_lint/releases/tag/v1.0.8
bazel_dep(name = "aspect_rules_lint", version = "1.2.2")

# ---

bazel_dep(name = "buildifier_prebuilt", version = "8.0.1")

# ---

# # rules_python
# # https://github.com/aspect-build/rules_py/releases/tag/v1.1.0
# # Example how to setup Python projects in monorepo
# # https://github.com/aspect-build/rules_py/blob/23f0f019df7921927b2677a1d40b40af27e09458/examples/uv_pip_compile/MODULE.bazel

bazel_dep(name = "rules_uv", version = "0.56.0", dev_dependency = True)

bazel_dep(name = "rules_python", version = "1.2.0")

bazel_dep(name = "aspect_rules_py", version = "1.3.2", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.9.13")
use_repo(python, "python_3_9_13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.9.13",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

# ---

bazel_dep(name = "rules_go", version = "0.53.0")
